# jpn_to_ipa_dart

./: .gitignore  CHANGELOG.md  FURIGANA_IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
example/: example.dart
ios/: japanese_phoneme_converter.podspec
ios/Classes/: JapanesePhonemeConverterPlugin.h  JapanesePhonemeConverterPlugin.m
lib/: japanese_phoneme_converter.dart
lib/src/: conversion_result.dart  japanese_phoneme_converter.dart  phoneme_exception.dart
linux/: CMakeLists.txt
macos/: CMakeLists.txt
native/: CMakeLists.txt  build.bat  build.sh  jpn_to_phoneme_ffi.cpp
test/: japanese_phoneme_converter_test.dart
windows/: CMakeLists.txt
